vp8enc: Add property to manually specify the timebase of the encoder

https://bugzilla.gnome.org/show_bug.cgi?id=695709